--- a/index.html
+++ b/index.html
@@ -1,57 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" href="do_you_love_me.css" />
-    <title>DO you love me?</title>
-  </head>
-  <body>
-    <!-- for more code, visit my tiktok account -->
-    <!-- tiktok "meowish" -->
-
-    <div class="question-container container">
-      <div
-        class="tenor-gif-embed"
-        data-postid="25789758"
-        data-share-method="host"
-        data-width="100%">
-        <a href="https://tenor.com/view/tkthao219-bubududu-gif-25789758"
-          >Tkthao219 Bubududu Sticker</a
-        >from
-        <a href="https://tenor.com/search/tkthao219-stickers"
-          >Tkthao219 Stickers</a
-        >
-      </div>
-      <script
-        type="text/javascript"
-        async
-        src="https://tenor.com/embed.js"></script>
-
-      <h2 class="question">Do you love me?</h2>
-      <div class="button-container">
-        <button class="yes-btn btn js-yes-btn">Yes</button>
-        <button class="no-btn btn js-no-btn">No</button>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Will You Be My Valentine?</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Will you be my Valentine?</h1>
+        <div class="buttons">
+            <button class="yes-button" onclick="handleYesClick()">Yes</button>
+            <button class="no-button" onclick="handleNoClick()">No</button>
+        </div>
+        <div class="gif_container">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExbW5lenZyZHI5OXM2eW95b3pmMG40cWVrMDhtNjVuM3A4dGNxa2g2dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/VM1fcpu2bKs1e2Kdbj/giphy.gif" alt="Cute GIF">
+        </div>
     </div>
-    <div class="result-container container">
-      <video class="gif-result" src="cute love gif.mp4" autoplay loop></video>
-      <h2>I knew it馃槏!</h2>
-    </div>
-
-    <div class="cssload-main">
-      <div class="cssload-heart">
-        <span class="cssload-heartL"></span>
-        <span class="cssload-heartR"></span>
-        <span class="cssload-square"></span>
-      </div>
-      <div class="cssload-shadow"></div>
-    </div>
-    <script src="do_you_love_me.js"></script>
-  </body>
+    <script src="script.js"></script>
+</body>
 </html>
