--- a/yes_page.html
+++ b/yes_page.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aku tau kamu menyukaiku!</title>
     <link rel="stylesheet" href="./yes_style.css">
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YCEXE5NQK0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YCEXE5NQK0');
+</script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             let timeoutRedirect;
