--- a/pages/index.html
+++ b/pages/index.html
@@ -3,4 +3,4 @@ layout: default
 title: Home
 ---
 <h1>Welcome to My Website</h1>
-<p>This is the homepage.</p>
+<p>This is the homepage. ini di pages</p>
