--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BootstrapDash Comingsoon Template</title>
+    <title>Oopss! Halaman belum tersedia saat ini</title>
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -18,7 +18,7 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/logo.svg" alt="logo">
+                    Yusup Fikri Hilmawan
                 </a>
                 <span class="navbar-text ml-auto d-none d-sm-inline-block">978-130-5444 </span>
                 <span class="navbar-text d-none d-sm-inline-block">jerald_glover@glennie.tv</span>
@@ -28,15 +28,14 @@
     <main class="my-auto">
         <div class="container">
             <h1 class="page-title">We're coming soon</h1>
-            <p class="page-description">Lorem ipsum dolor sit amet consectetur adipisicing elit sed eiu sit amet consectetur
+            <p class="page-description">
+                Situs ini lagi dalam proses perbaikan, jadi masih belum sepenuhnya siap. Tapi tenang, bakal ada banyak hal seru yang bisa dinikmatin nanti! Makasih banget udah mampir, sabar ya, situsnya bakal selesai sebentar lagi
             </p>
             <p>Stay connected</p>
             <nav class="footer-social-links">
-                <a href="#!" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-twitter"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-google"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-slack"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-skype"></i></a>
+                <a href="https://m.facebook.com/yusupfikrih" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
+                <a href="https://x.com/yusupfikrih" class="social-link"><i class="mdi mdi-twitter"></i></a>
+                <a href="https://instagram.com/yusupfikrih" class="social-link"><i class="mdi mdi-instagram"></i></a>
             </nav>
         </div>
     </main>
